Cleanup + added example gif

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Title</title>
+    <title>Razer Chroma - GTA V</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -19,10 +19,10 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                a
+                
             </div>
             <div class="col-6">
-                b
+                
             </div>
         </div>
     </div>
