Added some settings

--- a/index.html
+++ b/index.html
@@ -17,9 +17,24 @@
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row on-off-settings">
             <div class="col-6">
-                
+                <div class="form-check">
+                    <label class="form-check-label" for="wanted">
+                      <input class="form-check-input" type="checkbox" id="wanted">Enable wanted level lighting</label>
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label" for="health">
+                      <input class="form-check-input" type="checkbox" id="health">Enable health bar lighting</label>
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label" for="fps">
+                      <input class="form-check-input" type="checkbox" id="fps">Enable FPS lighting (Razer logo)</label>
+                </div>
+                <!--div class="form-check">
+                    <label class="form-check-label" for="azerty">
+                      <input class="form-check-input" type="checkbox" id="azerty">Use AZERTY layout</label>
+                </div-->
             </div>
             <div class="col-6">
                 
@@ -43,6 +58,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="js/ChromaSDKImpl.js"></script>
     <script src="js/KeyboardEffects.js"></script>
+    <script src="js/Settings.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
