--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <label class="form-check-label" for="fps">
                       <input class="form-check-input" type="checkbox" id="fps">Enable FPS lighting (Razer logo)</label>
                 </div>
-                <!--div class="form-check">
+                <div class="form-check">
                     <label class="form-check-label" for="azerty">
                       <input class="form-check-input" type="checkbox" id="azerty">Use AZERTY layout</label>
-                </div-->
+                </div>
             </div>
             <div class="col-6">
                 
