Some cosmic changes

--- a/index.html
+++ b/index.html
@@ -43,13 +43,18 @@
     </div>
     <footer class="fixed-bottom">
         <div class="content container">
-                <div class="row">
-                    <div class="col-9 col-md-5 col-lg-3">Connection to Razer Chroma SDK:</div>
-                    <span id="chromaConnection"></span>
-                </div>
+            <div class="row">
+                <div class="col-9 col-md-5 col-lg-3">Connection to Razer Chroma SDK:</div>
+                <span id="chromaConnection"></span>
+            </div>
             <div class="row">
                 <div class="col-9 col-md-5 col-lg-3">Connection to GTA V:</div>
                 <span id="gameConnection"></span>
+            </div>
+            <div class="logo">
+                <a href="https://developer.razerzone.com/works-with-chroma/" target="_blank" rel="noopener">
+                    <img src="img/works-with-chroma.png"/>
+                </a>
             </div>
         </div>
     </footer>
